--- a/Figma-to-Html-Css/style2.css
+++ b/Figma-to-Html-Css/style2.css
@@ -315,3 +315,84 @@ color: #4F433F;
   }
 
 
+  .carousel-inner {
+    padding: 1em;
+  }
+  .card {
+    margin: 0 0.5em;
+    box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
+    border: none;
+  }
+  .card-body{
+    background-color:    #C8ACA133;
+  }
+ 
+  .carousel-control-prev,
+  .carousel-control-next {
+    background-color: rgb(216, 22, 22);
+    width: 6vh;
+    height: 6vh;
+    border-radius: 50%;
+    top: 50%;
+    padding:22px;
+    transform: translateY(-50%);
+  }
+  @media (min-width: 768px) {
+    .carousel-item {
+      margin-right: 0;
+      flex: 0 0 25%;
+      display: block;
+
+    }
+    .carousel-inner {
+      display: flex;
+    }
+  }
+  .card .img-wrapper {
+      max-width: 100%;
+      height: 13em;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color:    #C8ACA133;
+  }
+  .card img {
+      max-height: 100%;
+  }
+  @media (max-width: 767px) {
+    .card .img-wrapper {
+      height: 17em;
+    }
+  }
+.card-title{
+  display: flex;
+  background: #F4EEEC;
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  padding:20px;
+  font-family: 'Brasley';
+  height: auto !important;
+ 
+}
+.sports-wear{
+  font-family: 'Brasley';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 16px;
+  text-align: center;
+  color: #2F2649;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+
+.direction-arrow{
+  width: 28.58px;
+  height: 17.81px;  
+  display: flex;
+  float: right;
+
+}
+
+
