--- a/Figma-to-Html-Css/style.css
+++ b/Figma-to-Html-Css/style.css
@@ -241,10 +241,13 @@ color: #4F433F;
     margin-left: 20px
   }
   .box-5{
+    display: flex;
     width: 5%;
     height: 60px;
     margin-top: 40px;
-    margin-left: 20px
+    margin-left: 20px;
+    align-items: center;
+    
   }
   .navbar-nav{
     padding-right:92px ;
@@ -263,7 +266,6 @@ color: #4F433F;
     margin-top:70px;
     border-radius: 8px;
     box-shadow: 10px 10px rgba(199, 185, 192, 0.3);;
-
     margin-bottom:90px;
 
 
@@ -283,7 +285,7 @@ color: #4F433F;
     line-height: 20px;
     align-content: center;    
     text-align: center;
-    padding-left:22px;
+    padding-left:40px;
     
     color: #000000;
     
@@ -303,7 +305,7 @@ color: #4F433F;
 
   }
   .info1{
-    margin-left:45px;
+    padding-left:63px;
   }
 
   @media only screen and (max-width: 600px){
@@ -315,22 +317,19 @@ color: #4F433F;
   }
 
 
-  .carousel-inner {
-    padding: 1em;
-  }
+  
   .card {
     margin: 0 0.5em;
+    background-color:    #C8ACA133;
     box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
     border: none;
+    width: auto !important;
+    height: auto !important;
   }
-  .card-body{
-    background-color:    #C8ACA133;
-  }
- 
+
   .carousel-control-prev,
   .carousel-control-next {
-    background-color: rgb(216, 22, 22);
-    width: 6vh;
+    width: 7vh;
     height: 6vh;
     border-radius: 50%;
     top: 50%;
@@ -350,41 +349,33 @@ color: #4F433F;
   }
   .card .img-wrapper {
       max-width: 100%;
-      height: 13em;
+      height: 14em;
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color:    #C8ACA133;
+      padding-top: 50px;;
+ 
   }
   .card img {
-      max-height: 100%;
+       padding:20px;
+      width:auto !important;
+      height: auto !important;
+
   }
   @media (max-width: 767px) {
     .card .img-wrapper {
       height: 17em;
     }
   }
-.card-title{
+.card-body{
   display: flex;
+  margin-left: 25px;
   background: #F4EEEC;
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.1);
+  background-size: cover;
   border-radius: 8px;
-  padding:20px;
-  font-family: 'Brasley';
-  height: auto !important;
- 
-}
-.sports-wear{
-  font-family: 'Brasley';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 16px;
-  text-align: center;
-  color: #2F2649;
-  flex: none;
-  order: 0;
-  flex-grow: 0;
+  width: 80%;
+ margin: 26px;
 }
 
 .direction-arrow{
@@ -392,7 +383,116 @@ color: #4F433F;
   height: 17.81px;  
   display: flex;
   float: right;
+  
+
+}
+.slide-left{
+ display: flex;
+ 
+ margin-left:-114px;
+ margin-bottom:130px;
+}
+.slide-right{
+  display: flex;
+ margin-right:-114px;
+ margin-bottom:130px;
 
 }
 
+@media only screen and (max-width: 600px) {
+  .slide-left{
+    display: flex;
+    
+    margin-left:-14px;}
+    .slide-right{
+      display: flex;
+    
+    margin-right:-4px;}
+}
+.product-intro{
+  display:flex;
+  justify-content: center;
+  font-family: 'Brasley';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 40px;
+  line-height: 40px;
+  text-align: center;
+  color: #2F2649;
+  padding-top:32px;
+}
+
+.product-description{
+  display:flex;
+  justify-content: center;
+  font-family: 'Brasley';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 20px;
+text-align: center;
+color: #000000;
+padding-bottom: 50px;;
+
+
+
+}
+.card-title{
+  display:flex;
+  justify-content: space-between;
+}
+.arrow-sider{
+  margin-left:32px;
+}
+
+.button-background{
+  display: flex;
+  justify-content: center;
+  background: rgba(200, 172, 161, 0.2);
+  border-radius: 8px;
+  margin-top:55px;
+  width:70%;
+  height:28%;
+  font-family: 'Brasley';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 20px;
+  color: #5B6E9D;
+  margin-bottom:44px;
+  padding:40px;
+ 
+}
+
+
+
+.parent-bg {
+  background: rgba(200, 172, 161, 0.2);
+border-radius: 8px;
+width: 100%;
+padding: 20px 20px 10px 20px;
+
+}
+.border-box {
+  border: 8px solid #7287BB;
+  width: 184px;
+  height: 182px;
+  z-index: 1;
+  
+}
+.text-bg {
+
+  margin-left: -147px;
+  font-family: 'Brasley';
+font-style: normal;
+font-weight: 700;
+font-size: 50px;
+line-height: 50px;
+text-align: center;
+color: #2F2649;
+background: rgba(200, 172, 161, 0.2);
+padding:22px;
+margin-top:40px;
+z-index: 80;
+}
 
