--- a/cv-fourth/public/assets/style.css
+++ b/cv-fourth/public/assets/style.css
@@ -1,14 +1,15 @@
 
 @media only screen and (min-width: 330px) {
     .card{
-        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;        width: 100%;
-      
-        margin-top:20px;
-        margin-bottom:20px;
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;       
+        width: 80%;
+        margin-left:50px;
+        
 
     } 
     .paragraph-alignment{
         margin-bottom:30px;
+
         }
 
         .education {
@@ -22,11 +23,10 @@
 
             color: #000000;
             padding-top: 13px;
-            padding-right: 165px;
         }
         
         .degree-div {
-            padding-top: 16px;
+            padding-top: 19px;
             padding-right: 100px;
             font-family: 'Inter';
             font-style: normal;
@@ -63,10 +63,12 @@
 }
 @media only screen and (min-width: 1200px) {
     .card{
-        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;    width: 60%;
-    margin-left:264px;
-    margin-top:20px;
-    margin-bottom:20px;
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;   
+         width: 60%;
+        margin-left:260px;
+        margin-top:20px;
+        margin-bottom:30px;
+
     }
     .line-image{
         display: flex;
@@ -90,7 +92,6 @@
 
         color: #000000;
         padding-top: 23px;
-        width: 1000%;
     }
     
     .degree-div {
@@ -120,13 +121,11 @@
     }
 
 
-
-
-
-
-
-
 .avatar{
+    margin-top:42px;
+    margin-left:62px;
+}
+.avatar2{
     margin-top:42px;
     margin-left:62px;
 }
@@ -238,3 +237,269 @@ color: #5B5959;
         padding-left: 13px;;
     }
 
+.icon-image
+{
+display: flex;
+flex-direction: row;
+padding-left:53px;
+}
+.education-contact{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 22px;
+    /* identical to box height */
+
+
+    color: #000000;
+    padding-top: 83px;
+    margin-left:48px;
+}
+.skill-language{
+    
+        display: flex;
+        flex-direction: column;
+        padding-top:12px;
+        margin-left:53px;
+
+}
+.designation{
+    font-family: 'Inter';
+font-style: normal;
+font-weight: 600;
+font-size: 24px;
+line-height: 29px;
+/* identical to box height */
+
+
+color: #000000;
+
+}
+.john{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 9000;
+    font-size: 35px;
+    line-height: 52px;
+    
+    color: #000000;
+    
+}
+.main-john{
+    padding-top:35px;
+    padding-left: 28px;
+}
+.profile {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 22px;
+    /* identical to box height */
+    color: #AAA37F;
+    
+    padding-right:130px;
+}
+
+.profile- {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 22px;
+    /* identical to box height */
+    padding-left: 10px;
+    color: #000000;
+}
+
+.profile-description {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
+    color: #5B5959;
+}
+
+.education-details {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 22px;
+    /* identical to box height */
+    color: #AAA37F;
+}
+
+.education-detail {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 22px;
+    /* identical to box height */
+    color: #000000;
+    margin-right: 72px;
+}
+
+.university-data {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
+    /* identical to box height */
+    color: #565252;
+    padding-right:160px;
+    padding-bottom:20px;
+    padding-top:20px;
+}
+
+.university-description {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
+    color: #5B5959;
+}
+
+.edu {
+    padding-top: 22px;
+}
+
+.profile-div {
+    padding-top: 20px;
+    padding-left: 5px;
+    padding-bottom: 10px;
+}
+
+.paragraph-div {
+    width: 250px;
+}
+
+.education-div {
+    padding-top: 13px;
+    padding-right: 165px;
+}
+
+.degree-div {
+    padding-top: 16px;
+    padding-right: 100px;
+}
+
+.uni-div {
+    padding-top: 10px;
+    padding-bottom: 20px;
+    padding-right: 138px;
+}
+
+.degree-name-ui {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 15px;
+    /* identical to box height */
+    color: #AAA37F;
+    margin-left: 9px;
+}
+
+
+.degree-name {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 15px;
+    /* identical to box height */
+    color: #565252;
+    
+    margin-right: 79px;
+}
+.degree-name-second {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 15px;
+    /* identical to box height */
+    color: #565252;
+    margin-right: 173px;}
+
+.degree-name-sen {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 15px;
+    /* identical to box height */
+    color:#AAA37F;
+    margin-right: 79px;
+    margin-left: 30px;
+}
+
+.profile-related{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 1340px;
+    width: 100%;
+    margin-left: 11px;
+    padding-top: 120px;
+
+}
+.education-div2 {
+    padding-top: 13px;
+    padding-right: 135px;
+}
+.degree-div3{
+    padding-top: 19px;
+    margin-left: -75px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 19px;
+
+    color: #565252;
+}
+.degree-div4{
+    padding-top: 9px;
+    padding-left: 25px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 19px;
+
+    color: #565252;
+}
+.university-data2{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
+    /* identical to box height */
+    color: #565252;
+    padding-right:130px;
+    padding-bottom:20px;
+    padding-top:20px;
+}
+.prof-para{
+  
+    width:270px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 18px;
+
+    color: #000000;
+
+}
+.prof-para-div{
+margin-top:20px;
+}
