--- a/Laravel-Projects/figma-laravel/public/assets/crypto.css
+++ b/Laravel-Projects/figma-laravel/public/assets/crypto.css
@@ -356,14 +356,39 @@ text-align: center;
   color: #515151;
 }
 
+.moneymen{
+  padding-top:500px;
+}
+
+.trade-div{
+  padding-top:60px;
+}
+
+.anywhere-head{
+  font-family: 'Verdana';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 44px;
+  line-height: 70px;
+  /* identical to box height, or 175% */
+
+  text-align: center;
+
+  color: #2F2D2D;
+
+}
 
 
-
-
-
-
-
-
+.term-content{
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 150%;
+  /* identical to box height, or 24px */
+  padding-left:100px;
+  color: #515151;
+}
 
 
 
