--- a/Laravel-Projects/figma-laravel/public/assets/crypto.css
+++ b/Laravel-Projects/figma-laravel/public/assets/crypto.css
@@ -79,7 +79,7 @@ background-image: url('./images/blur back.png');
 
 }
 .div2{
-    border-radius: 25px;
+    border-radius: 20px;
     margin-left:18px;
 
 
@@ -312,7 +312,8 @@ text-align: center;
 
 .linegap-div{
   padding-top:120px;
-  margin-left:-20px;
+  /* margin-left:40px; */
+  /* margin-left:-40px; */
 }
 
 .step-p{
@@ -359,9 +360,13 @@ text-align: center;
 .moneymen{
   padding-top:500px;
 }
-
+.moneymen-d{
+  padding-left:22px;
+}
 .trade-div{
   padding-top:60px;
+  padding-left:90px;
+
 }
 
 .anywhere-head{
@@ -372,7 +377,7 @@ text-align: center;
   line-height: 70px;
   /* identical to box height, or 175% */
 
-  text-align: center;
+  padding-left: 93px;
 
   color: #2F2D2D;
 
@@ -389,6 +394,232 @@ text-align: center;
   padding-left:100px;
   color: #515151;
 }
+
+
+
+.playlist-d{
+  display: flex;
+  flex-direction: row;
+  padding-left:200px;
+padding-top:30px;
+}
+
+
+
+.download-f{
+  font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 150%;
+/* identical to box height, or 24px */
+
+padding-left:23px;
+
+color: #515151;
+}
+
+
+
+
+.download-site{
+  font-family: 'Poppins';
+font-style: normal;
+font-weight: 600;
+font-size: 16px;
+line-height: 150%;
+/* identical to box height, or 24px */
+margin-top:-20px;
+padding-left:23px;
+color: #2F2D2D;
+}
+.become-a{
+  font-family: 'Verdana';
+font-style: normal;
+font-weight: 700;
+font-size: 40px;
+line-height: 70px;
+/* or 175% */
+
+width: 539px;
+text-align: center;
+color: #2F2D2D;
+margin-left:-90px 
+
+}
+.anywhere-p{
+  padding-left:20px;
+}
+
+.content-gap{
+  padding-top: 150px;
+
+}
+
+
+.block-1{
+  background: #FFFFFF;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 18px;
+}
+
+
+.crypto-trader{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin-left: 12px;
+}
+
+
+
+.bx-crypto{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 290px;
+  height: 364px;
+  background: #fff;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 18px;
+  text-align: center;
+}
+
+
+.buy-sell{
+  font-family: 'Verdana';
+font-style: normal;
+font-weight: 700;
+font-size: 18px;
+line-height: 150%;
+/* identical to box height, or 27px */
+padding-top:15px;
+text-align: center;
+
+color: #000000;
+
+border: 0.5px solid #FFFFFF;
+
+}
+
+.content-sell{
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  /* or 24px */
+  
+  width: 246px;
+  text-align: center;
+  margin-left:20px;
+  color: #515151;
+}
+
+  .but-cryp{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    /* identical to box height, or 125% */
+    border: 1px solid #8F60FF;
+    border-radius: 4px;
+    width: 118px;
+
+    color: #8F60FF;
+    padding-top: 10px;
+    margin-left: 83px;
+    margin-top:20px;
+  }
+
+.gap{
+  padding-top:83px;
+}
+
+.crypto-img{
+  padding-top: 30px;
+}
+.button-contact{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 12px 24px;
+  gap: 10px;
+  width: 138px;
+  margin-top:100px;
+  margin-left:30px;
+  height: 44px;
+  background: #8F60FF;
+  border-radius: 4px;
+  padding-top:30px;
+}
+
+
+.testimonials{
+  font-family: 'Verdana';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 70px;
+  /* identical to box height, or 175% */
+  text-align: center;
+  margin-left:-20px;
+  color: #2F2D2D;
+}
+
+
+.test-row{
+  padding-top: 200px;
+
+}
+
+
+
+
+.card h3{
+  font-weight: 600;
+}
+
+.card img{
+  position: absolute;
+  top: 20px;
+  right: 15px;
+  max-height: 120px;
+}
+
+.card-1{
+  
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: 80px;
+}
+
+.card-2{
+      background-repeat: no-repeat;
+    background-position: right;
+    background-size: 80px;
+}
+
+.card-3{
+      background-repeat: no-repeat;
+    background-position: right;
+    background-size: 80px;
+}
+
+@media(max-width: 990px){
+  .card{
+    margin: 50px;
+    
+  }
+} 
+
+
+
+
+
+
 
 
 
