--- a/figma-laravel/public/assets/crypto.css
+++ b/figma-laravel/public/assets/crypto.css
@@ -7,11 +7,7 @@
   background-color:#08001A;
 
 }
-.header1{
-    background-color:#08001A;
-    height: 280px;
 
-}
 
 /* <img src="{{ asset('assets/images/avatar.png') }}" alt="profile picture" width="230" height="230" > */
 .text-head{
@@ -82,7 +78,7 @@ background-image: url('./images/blur back.png');
   border-radius: 20px;
   /* margin-top:-20px; */
   width: 266px;
-  height: 226px;
+  height: 236px;
   text-align: center;
   margin:10px;
 
@@ -90,6 +86,9 @@ background-image: url('./images/blur back.png');
 
 .bg-rad{
     background-color: #ffff;
+    width: 285px;
+    height:500px;
+
 }
 
 
@@ -121,19 +120,21 @@ background-image: url('./images/blur back.png');
     border-radius: 20px;
     /* margin-top:-20px; */
     width: 266px;
-    height: 226px;
+    height: 236px;
     padding:30px;    
     margin:10px;
   }
 
-
+  .head-5{
+    padding-top:200px;
+  }
 
   .div3-image-box{
     background: rgba(254, 201, 221, 1);
     border-radius: 20px;
     /* margin-top:-20px; */
     width: 266px;
-    height: 226px;
+    height: 236px;
     text-align: center;
     margin:10px;
   }
@@ -143,7 +144,7 @@ background-image: url('./images/blur back.png');
     border-radius: 20px;
     /* margin-top:-20px; */
     width: 266px;
-    height: 226px;
+    height: 236px;
     text-align: center;
     margin:10px;
   
@@ -153,7 +154,7 @@ background-image: url('./images/blur back.png');
     border-radius: 20px;
     /* margin-top:-20px; */
      width: 266px;
-    height: 226px;
+    height: 236px;
     text-align: center;
     margin:10px;
   }
@@ -348,31 +349,14 @@ padding-top: 13px;
   color: #515151;
 }
 
-.moneymen{
-  padding-top:500px;
-}
-.moneymen-d{
-  padding-left:22px;
-}
+
 .trade-div{
   padding-top:60px;
   padding-left:90px;
 
 }
 
-.anywhere-head{
-  font-family: 'Verdana';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 44px;
-  line-height: 70px;
-  /* identical to box height, or 175% */
 
-  padding-left: 93px;
-
-  color: #2F2D2D;
-
-}
 
 
 .term-content{
@@ -424,21 +408,9 @@ padding-top: 13px;
   padding-left:23px;
   color: #2F2D2D;
 }
-.become-a{
-  font-family: 'Verdana';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 40px;
-  line-height: 70px;
-  /* or 175% */
 
-  width: 539px;
-  text-align: center;
-  color: #2F2D2D;
-  margin-left:-90px 
-
-}
 .anywhere-p{
+  padding-right:10px;
 }
 
 .content-gap{
@@ -454,20 +426,15 @@ padding-top: 13px;
 }
 
 
-.crypto-trader{
-  display:flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  margin-left: 12px;
-}
+
 
 
 
 .bx-crypto{
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  width: 290px;
+  justify-content: space-between;
+  width: 320px;
   height: 364px;
   background: #fff;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
@@ -499,10 +466,8 @@ padding-top: 13px;
   font-size: 16px;
   line-height: 150%;
   /* or 24px */
-  
-  width: 246px;
   text-align: center;
-  margin-left:20px;
+  width: 100%;
   color: #515151;
 }
 
@@ -516,15 +481,20 @@ padding-top: 13px;
     border: 1px solid #8F60FF;
     border-radius: 4px;
     width: 118px;
-
+    align-items: center;
+    align-content: center;
     color: #8F60FF;
     padding-top: 10px;
-    margin-left: 83px;
-    margin-top:20px;
+    margin-left: 100px;
+    margin-bottom: 22px;
   }
 
 .gap{
   padding-top:83px;
+  
+}
+.crypt-top{
+  
 }
 
 .crypto-img{
@@ -814,8 +784,6 @@ padding-top: 13px;
 
 
     .img-cloud{
-      padding-top:100px;
-      padding-bottom: 80px;;
     }
     .img-cloud2{
       padding-top:100px;
@@ -836,11 +804,9 @@ padding-top: 13px;
     
 }
 .second-section{
-  margin-top:150px;
+  padding-top:150px;
 }
-.div-details{
-  margin:0px 0px;
-}
+
   .section-div{
     display: flex;
     flex-direction: row;
@@ -855,6 +821,24 @@ padding-top: 13px;
     display: flex;
     flex-direction: column;
   }
+
+  .become-a{
+    font-family: 'Verdana';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 70px;
+    /* or 175% */
+  
+    width: 539px;
+    text-align: center;
+    color: #2F2D2D;
+    margin-left:-90px 
+  
+  }
+
+
+
   .data-block2{
     display: flex;
     flex-direction: column;
@@ -872,7 +856,7 @@ padding-top: 13px;
     flex-direction: row;
   }
   .linegap-div{
-    padding-top:120px;
+    /* padding-top:120px; */
     /* margin-left:40px; */
     /* margin-left:-40px; */
   }
@@ -882,9 +866,9 @@ padding-top: 13px;
 .paragraph-div{
   display: flex;
   flex-direction: column;
-  width: 246px;
-height: 72px;
-text-align: center;
+  width: 100%;
+  height: auto;
+  text-align: center;
 
 
 }
@@ -892,9 +876,39 @@ text-align: center;
 .becomes{
   display: flex;
   flex-direction: column;
-align-items: center;
+  align-items: center;
 } 
+.header1{
+  background-color:#08001A;
+  height: 280px;
 
+}
+.moneymen{
+  padding-top:200px;
+ }
+ .moneymen-d{
+   padding-top:200px;
+   padding-left:22px;
+ }
+ .anywhere-head{
+  font-family: 'Verdana';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 44px;
+  line-height: 70px;
+  /* identical to box height, or 175% */
+
+  padding-left: 93px;
+
+  color: #2F2D2D;
+
+}
+.crypto-trader{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-left: 12px;
+}
 }
 
 
@@ -945,26 +959,72 @@ align-items: center;
   margin-right: 30px;
   margin-bottom: 10px;
 }
+.become-a{
+  font-family: 'Verdana';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 70px;
+  /* or 175% */
+
+  width: 539px;
+  text-align: center;
+  color: #2F2D2D;
+  margin-left:-90px 
+
+}
 .third-div-block{
   display: flex;
   flex-direction: row;
 }
 .linegap-div{
-  padding-top:120px;
+  /* padding-top:120px; */
   /* margin-left:40px; */
   /* margin-left:-40px; */
 }
-
+.becomes{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+} 
 
 .paragraph-div{
   display: flex;
   flex-direction: column;
-  width: 246px;
-  height: 72px;
+
   text-align: center;
 
 }
+.header1{
+  background-color:#08001A;
+  height: 280px;
 
+}
+.moneymen{
+  padding-top:200px;
+ }
+ .moneymen-d{
+   padding-top:200px;
+   padding-left:22px;
+ }
+ .anywhere-head{
+  font-family: 'Verdana';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 44px;
+  line-height: 70px;
+  /* identical to box height, or 175% */
+
+  /* padding-left: 93px; */
+
+  color: #2F2D2D;
+
+}
+.crypto-trader{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
 
 }
 
@@ -984,30 +1044,31 @@ align-items: center;
   .parent-div{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
 }
 .second-section{
-  margin-top:150px;
+  padding-top:150px;
 }
 .div-details{
   margin:0px 0px;
 }
 .section-div{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
   background: #F8F5FF;
-  height: 231px;
   padding:40px;
   border-radius: 12px;
-
-  overflow: scroll;
+  height:auto;
+  width: 100%;
+  align-items: center;
 
 }
 .data-block{
   display: flex;
   flex-direction: column;
-  margin-right:52px;
+  padding-top:22px;
 }
 .data-block2{
   display: flex;
@@ -1015,20 +1076,18 @@ align-items: center;
   background: #FFFFFF;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
   border-radius: 18px;
-  width: 170px;
-  height:210px;
-  margin-top:-30px;
-  padding:20px;
-  margin-right: 30px;
-  margin-bottom: 10px;
+  margin-top:32px;
+  margin-left:40px;
+  width:200px;
 }
 .third-div-block{
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content:space-between;
+
 }
 .linegap-div{
-  padding-top:120px;
+  /* padding-top:120px; */
   /* margin-left:40px; */
   /* margin-left:-40px; */
   display: none;
@@ -1040,6 +1099,90 @@ align-items: center;
   flex-direction: column;
   justify-content: space-between;
 }
+.header1{
+  background-color:#08001A;
+  height: auto;
+
+}
+.moneymen{
+  padding-top:200px;
+  margin-right:180px;
+ }
+ .moneymen-d{
+   padding-top:200px;
+   margin-right:50px;
+
+ }
+ .anywhere-head{
+  font-family: 'Verdana';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 34px;
+  line-height: 70px;
+  /* identical to box height, or 175% */
+  color: #2F2D2D;
+  padding-left:90px;
+}
+.become-a{
+  font-family: 'Verdana';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 70px;
+  /* or 175% */
+
+  width: 100%;
+  color: #2F2D2D;
+  padding-left:70px;
+  
+}
+.becomes{
+  display: flex;
+  flex-direction: column;
+justify-content: center; 
+} 
+.crypto-trader{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.crypt-top{
+  padding-top:20px;
+  
+}
+}
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.money-head{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
